--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@
 PORT="1711"
 JWT_SECRET="710c5370aa4dddcb01e26de79ab1c710816cffa0"
 JWT_EXPIRATION_TIME="1d"
-DATABASE_URL="postgresql://postgres:78945maxMAX.@localhost:5432/internlab_db"
+DATABASE_URL="postgresql://postgres:favour@localhost:5432/internlab_db" 
